# e3_e4

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_logging.py
src/e3_e4/: config.py
src/e3_e4/utils/: logging.py
tests/: conftest.py
tests/unit/: test_config.py
